--- a/docs/domain_model_v2/api-docs/swagger/content_model_api/content_model_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/content_model_api/content_model_apis.yaml
@@ -36,6 +36,10 @@ tags:
     description: >-
       Everything related to Change in state of Content and its availability for
       further usage
+  - name: Reject
+    description: >-
+      Everythhing related to Rejection of a Content which is in
+      Review/FlagReview state
 paths:
   /create:
     post:
@@ -445,7 +449,7 @@ paths:
       description: >-
         The '/flag/{content_id}' endpoint flags a particular content and makes
         it unavailbale for future usage. It consumes the content identifier as
-        request path variable with falg request body. In response it returns the
+        request path variable with flag request body. In response it returns the
         message that particular content has been flagged
       operationId: ekstep.learning.content.flag
       produces:
@@ -473,7 +477,51 @@ paths:
           schema:
             $ref: '#/definitions/ContentFlagErrorResponse'
       security: []
+  '/reject/{contentId}':
+    post:
+      tags:
+        - Reject
+      summary: Rejects a particular Content in Review State.
+      description: >-
+        The '/reject/{content_id}' endpoint rejects a particular content which
+        is in review state and pushes it to draft state. It consumes the content
+        identifier as request path variable with reject request body. In
+        response it returns the message that particular content has been
+        rejected
+      operationId: ekstep.learning.content.reject
+      produces:
+        - application/json
+      parameters:
+        - $ref: '#/parameters/ContentId'
+        - $ref: '#/parameters/RejectRequestBody'
+      responses:
+        '200':
+          description: Content Rejected Successfully
+          schema:
+            $ref: '#/definitions/ContentRejectResponse'
+        '400':
+          description: >-
+            Error While Rejecting a particular content! | Error occurred while
+            operation, mostly because of the input given by client, In general
+            it is 'Client Exception
+          schema:
+            $ref: '#/definitions/ContentRejectErrorResponse'
+        '500':
+          description: >-
+            Error While flagging a particular content! | Error occurred while
+            operation, mostly because of erroneous condition on server, In
+            general it is 'Server Exception' or 'Exception
+          schema:
+            $ref: '#/definitions/ContentRejectErrorResponse'
+      security: []
 parameters:
+  RejectRequestBody:
+    name: Request
+    in: body
+    description: Content Request Object which contains the request data
+    required: true
+    schema:
+      $ref: '#/definitions/ContentRejectRequestObject'
   ContentRequestObject:
     name: Request
     in: body
@@ -519,6 +567,21 @@ parameters:
     schema:
       $ref: '#/definitions/FlagRequestObject'
 definitions:
+  ContentRejectRequestObject:
+    properties:
+      request: {}
+  ContentRejectResponse:
+    title: Content Reject Response
+    type: object
+    allOf:
+      - $ref: '#/definitions/ResultWithNodeId'
+      - $ref: '#/definitions/ResponseHeader'
+  ContentRejectErrorResponse:
+    title: Reject Content Error Response
+    type: object
+    allOf:
+      - $ref: '#/definitions/EmptyResult'
+      - $ref: '#/definitions/ResponseHeader'
   Content:
     title: Content Metadata
     type: object
