--- a/platform-jobs/samza/content-enrichment/deploy/samza/config/content-enrichment.properties
+++ b/platform-jobs/samza/content-enrichment/deploy/samza/config/content-enrichment.properties
@@ -1,6 +1,6 @@
 # Job
 job.factory.class=org.apache.samza.job.yarn.YarnJobFactory
-job.name=__env__.publishPipeline
+job.name=__env__.content-enrichment
 
 # YARN
 yarn.package.path=http://__yarn_host__:__yarn_port__/__env__/${project.artifactId}-${pom.version}-distribution.tar.gz
@@ -12,7 +12,7 @@ metrics.reporter.snapshot.stream=kafka.__env__.lp.metrics
 metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 
 # Task
-task.class=org.ekstep.backend.samza.task.PublishPipelineTask
+task.class=org.ekstep.backend.samza.task.ContentEnrichmentTask
 task.inputs=kafka.__env__.telemetry.raw
 
 # Serializers
@@ -31,3 +31,7 @@ systems.kafka.producer.bootstrap.servers=__kafka_brokers__
 job.coordinator.system=kafka
 # Normally, this would be 3, but we have only one broker.
 job.coordinator.replication.factor=1
+
+#Job specifc configuration
+platform-api-url=__lp_url__
+ekstepPlatformApiUserId=ilimi
