--- a/platform-jobs/samza/distribution/pom.xml
+++ b/platform-jobs/samza/distribution/pom.xml
@@ -26,21 +26,27 @@
 		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>object-lifecycle</artifactId>
-			<version>0.0.4</version>
-			<type>tar.gz</type>
-			<classifier>distribution</classifier>
-		</dependency>
-		<!-- 
-		<dependency>
-			<groupId>org.ekstep</groupId>
-			<artifactId>publish-pipeline</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>0.0.5</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>content-enrichment</artifactId>
+			<version>0.0.1</version>
+			<type>tar.gz</type>
+			<classifier>distribution</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>image-tagging</artifactId>
+			<version>0.0.1</version>
+			<type>tar.gz</type>
+			<classifier>distribution</classifier>
+		</dependency>
+	<!--<dependency>
+			<groupId>org.ekstep</groupId>
+			<artifactId>word-enrichment</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
@@ -51,17 +57,10 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
-		</dependency>
+		</dependency> 
 		<dependency>
 			<groupId>org.ekstep</groupId>
-			<artifactId>image-tagging</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<type>tar.gz</type>
-			<classifier>distribution</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.ekstep</groupId>
-			<artifactId>word-enrichment</artifactId>
+			<artifactId>publish-pipeline</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>tar.gz</type>
 			<classifier>distribution</classifier>
