--- a/platform-tools/kernel-extension/pom.xml
+++ b/platform-tools/kernel-extension/pom.xml
@@ -42,6 +42,29 @@
 						<target>1.8</target>
 					</configuration>
 				</plugin>
+
+				<plugin>
+        			<groupId>org.codehaus.mojo</groupId>
+        			<artifactId>cobertura-maven-plugin</artifactId>
+        			<version>2.7</version>
+        			<configuration>
+        				<aggregate>true</aggregate>
+        				<outputDirectory>coverageReport</outputDirectory>
+        				<formats>
+                        	<format>html</format>
+                        	<format>xml</format>
+                    	</formats>
+                    	<instrumentation>
+            				<excludes>
+            					<exclude>**/**</exclude>
+            				</excludes>
+          				</instrumentation>
+          				<check>
+          					<haltOnFailure>false</haltOnFailure>
+          				</check>
+          				<skip>true</skip>
+        			</configuration>
+      			</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
