--- a/platform-jobs/samza/audit-history-indexer/src/main/config/audit-history-indexer.properties
+++ b/platform-jobs/samza/audit-history-indexer/src/main/config/audit-history-indexer.properties
@@ -29,6 +29,7 @@ systems.kafka.samza.msg.serde=json
 systems.kafka.streams.metrics.samza.msg.serde=metrics
 systems.kafka.consumer.zookeeper.connect=__zookeepers__
 systems.kafka.consumer.auto.offset.reset=smallest
+#systems.kafka.samza.offset.default=oldest // TODO: enable this configuration after release-2.7
 systems.kafka.producer.bootstrap.servers=__kafka_brokers__
 
 # Job Coordinator
