--- a/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
+++ b/platform-jobs/samza/composite-search-indexer/src/main/config/composite-search-indexer.properties
@@ -38,7 +38,7 @@ job.coordinator.system=kafka
 job.coordinator.replication.factor=1
 
 # Job specific config properties
-elastic-search-host=http://__es_host__
+elastic-search-host=http://__es_search_host__
 elastic-search-port=__es_port__
 platform-api-url=__lp_url__
 ekstepPlatformApiUserId=ilimi
