--- a/platform-tools/spikes/sunbird-tools/src/test/resources/loader.conf
+++ b/platform-tools/spikes/sunbird-tools/src/test/resources/loader.conf
@@ -1,11 +1,15 @@
 channel=sunbird
-env = Staging
+env = dev
 
-sunbird.host = "https://staging.open-sunbird.org"
-sunbird.api.token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiI2NTU0NDQ5ZWI0MGQ0YTI4ODQ3YzAzYWZlNmJjMmEyOCJ9.YhnTaDw_xvf8Q5S66QiO71-5WeqLaTPv-vvNZSwBqLk"
+sunbird.host = "https://dev.open-sunbird.org"
+sunbird.api.token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJkMTc1MDIwNDdlODc0ODZjOTM0ZDQ1ODdlYTQ4MmM3MyJ9.7LWocwCn5rrCScFQYOne8_Op2EOo-xTCK5JCFarHKSs"
 
-ekstep.host = "https://qa.ekstep.in"
-ekstep.api.token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJkNjNiMjgwZTQ1NDE0NDU4ODk4NzcwYzZhOGZiZjQ1MCJ9.Ji-22XcRrOiVy4dFAmE68wPxLkNmX4wKbTj_IB7fG6Y"
+ekstep.host = "https://dev.ekstep.in"
+ekstep.api.token = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiI1OWFiMmE2MDc1YzI0ODU2YjhiYjIzMjg4ZDdhZGNmNSJ9.RLouNX7RQ0VkVv2BYqNtH12D0IzKnBJ_I46xEORwHsU"
+
+api.auth.token = ${sunbird.host}"/auth/realms/sunbird/protocol/openid-connect/token"
+api.register.user = ${sunbird.host}"/api/data/v1/client/register"
+api.profile.read = ${sunbird.host}"/api/user/v1/profile/read"
 
 api.content.get = ${sunbird.host}"/api/content/v1/read/{content_id}"
 api.content.create = ${sunbird.host}"/api/content/v1/create"
@@ -20,7 +24,7 @@ api.content.retire = ${sunbird.host}"/api/content/v1/retire"
 api.concept.create = ${ekstep.host}"/api/domain/v3/{domain}/concepts/create"
 api.concept.update = ${ekstep.host}"/api/domain/v3/{domain}/concepts/update/{concept_id}"
 api.concept.search = ${ekstep.host}"/api/composite/v3/search"
-api.concept.retire = ${ekstep.host}"/api/domain/v3/{domain}/concepts/retire"
+api.concept.retire = ${ekstep.host}"/api/domain/v3/{domain}/concepts/retire/{concept_id}"
 
 api.dimension.create = ${ekstep.host}"/api/domain/v3/{domain}/dimensions/create"
 api.dimension.update = ${ekstep.host}"/api/domain/v3/{domain}/dimensions/update"
