--- a/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
+++ b/platform-jobs/samza/image-tagging/src/main/config/image-tagging.properties
@@ -14,10 +14,10 @@ metrics.reporter.jmx.class=org.apache.samza.metrics.reporter.JmxReporterFactory
 # Task
 task.class=org.ekstep.jobs.samza.task.ImageTaggingTask
 task.inputs=kafka.__env__.telemetry.raw
-task.checkpoint.factory=org.apache.samza.checkpoint.kafka.KafkaCheckpointManagerFactory
-task.checkpoint.system=kafka
-task.checkpoint.replication.factor=1
-task.commit.ms=60000
+#task.checkpoint.factory=org.apache.samza.checkpoint.kafka.KafkaCheckpointManagerFactory
+#task.checkpoint.system=kafka
+#task.checkpoint.replication.factor=1
+#task.commit.ms=60000
 
 # Serializers
 serializers.registry.json.class=org.apache.samza.serializers.JsonSerdeFactory
